--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -5,13 +5,15 @@
 }
 
 button,
-select {
+select,
+input {
   &:focus {
     outline: none;
-    box-shadow: 0px 0px 5px 0px blue !important;
+    box-shadow: 0px 0px 2px 0px rgb(255, 0, 119) !important;
   }
 }
 
-body {
-  font-family: "Yantramanav", sans-serif;
+body,
+select {
+  font-family: "Nunito", sans-serif;
 }
