--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -9,11 +9,31 @@ select,
 input {
   &:focus {
     outline: none;
-    box-shadow: 0px 0px 2px 0px rgb(255, 0, 119) !important;
+    box-shadow: 0 0 rem(3) 0 var(--brand) !important;
   }
 }
 
 body,
 select {
   font-family: "Nunito", sans-serif;
+}
+
+body {
+  &::-webkit-scrollbar {
+    width: rem(6);
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: rem(15);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: rem(15);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
 }
